fix layout overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,7 +5,8 @@
 body {
     font-family: 'Inter';
     background-color: #1B2838;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     margin: 0px;
 }
 
